MDEV-6683 A parameter and a string literal with the same values are not recognized as equal by the optimizer